<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ImageView
        android:id="@+id/carImg"
        android:layout_width="412dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/carModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/spacer_large"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImg" />

    <TextView
        android:id="@+id/carShortDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/spacer_large"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carModel" />

    <TextView
        android:id="@+id/vehicleInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/vehicle_info"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/spacer_large"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carShortDescription" />

    <TextView
        android:id="@+id/locationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="left"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/vehicleInfo" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_large"
        android:layout_marginTop="28dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicleInfo" />

    <TextView
        android:id="@+id/exteriorColorValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/locationValue" />

    <TextView
        android:id="@+id/exteriorColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_large"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="@string/exterior_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationLabel" />

    <TextView
        android:id="@+id/interiorColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_large"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="@string/interior_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exteriorColorLabel" />

    <TextView
        android:id="@+id/driveTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_large"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="@string/drive_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interiorColorLabel" />

    <TextView
        android:id="@+id/interiorColorValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/exteriorColorValue" />

    <TextView
        android:id="@+id/driveTypeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/interiorColorValue" />

    <TextView
        android:id="@+id/transmissionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_large"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="@string/transmission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driveTypeLabel" />

    <TextView
        android:id="@+id/transmissionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/driveTypeValue" />

    <TextView
        android:id="@+id/bodyStyleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_large"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="@string/body_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transmissionLabel" />

    <TextView
        android:id="@+id/engineLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_large"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="@string/engine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyStyleLabel" />

    <TextView
        android:id="@+id/fuelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_large"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="@string/fuel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/engineLabel" />

    <TextView
        android:id="@+id/bodyStyleValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/transmissionValue" />

    <TextView
        android:id="@+id/engineValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bodyStyleValue" />

    <TextView
        android:id="@+id/fuelValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacer_default"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/engineValue" />

    <Button
        android:id="@+id/button2"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="42dp"
        android:text="@string/button_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuelLabel"
        app:layout_constraintVertical_bias="0.292" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>